<resources>
    <string name="app_name">New York Guide App</string>
    <string name="restaurants">Restau- rants</string>
    <string name="hotels">Hotels</string>
    <string name="tours">Tours</string>
    <string name="attractions">Attracti-ons</string>
    <string name="barbetta">Barbetta</string>
    <string name="barbetta_address">321 W. 46th St. Manhattan, NY, 10036</string>
    <string name="barbetta_descr">This establishment claims to be the oldest family-owned restaurant
        in all of NYC. They’ve been purveyors of traditional Northern Italian fare since 1906.</string>
    <string name="brasserie">Brasserie 8 1/2</string>
    <string name="brasserie_address">9 W. 57th St.        Manhattan, NY, 10019</string>
    <string name="brasserie_descr">The original (and now closed) Brasserie was a first-year
        Restaurant Week participant; diners can enjoy the type of elegant French cuisine it was
        known for at its sister restaurant in Midtown West.</string>
    <string name="cipriani">Cipriani Wall Street</string>
    <string name="cipriani_address">55 Wall St.      Manhattan, NY, 10005</string>
    <string name="cipriani_descr">The classic Italian dishes and signature cocktails at this majestic
        Financial District establishment echo those of Bellini by Cipriani and (the still extant)
        Harry Cipriani, both of which were original participants in NYC Restaurant Week.</string>
    <string name="delmonico">Delmonico’s</string>
    <string name="delmonico_address">56 Beaver St. Manhattan, NY, 10004</string>
    <string name="delmonico_desc">This historic steakhouse was a pioneer of fine dining when it
        first opened in 1837. You’ll find the same commitment to quality throughout its current incarnation.</string>
    <string name="felidia">Felidia</string>
    <string name="felidia_address">243 E. 58th St. Manhattan, NY, 10022</string>
    <string name="felidia_desc">Celebrity chef Lidia Bastianich is an icon of Italian cooking. At
        her flagship, the menu typically features hearty but refined Italian dishes like pear and
        pecorino ravioli and braised quail legs with zucchini rollatine. </string>
    <string name="hotel_penn">New York’s Hotel Pennsylvania</string>
    <string name="penn_address">401 Seventh Ave. Manhattan, NY, 10001</string>
    <string name="penn_desc">Located steps from Madison Square Garden, the Hotel Pennsylvania is
        also close to Macy’s and the Empire State Building—the perfect location from which to explore some of NYC’s most famous attractions. The hotel itself is one of the City’s largest, with more than 1,700 rooms.</string>
    <string name="wyndham">Wyndham New Yorker Hotel</string>
    <string name="wyndham_address">481 Eighth Ave. Manhattan, NY, 10001</string>
    <string name="wyndham_desc">Over the course of its history, this hotel has hosted the likes of
        John F. Kennedy, Muhammad Ali and Nikola Tesla (who called it home for 10 years). Aside from
        a central location, this art deco Midtown property offers a gym and the 24-hour Tick Tock Diner.</string>
    <string name="stewart_hotel">Stewart Hotel</string>
    <string name="stewart_address">371 Seventh Ave. Manhattan, NY, 10001</string>
    <string name="stewart_desc">The striking design and high ceilings of this hotel sets the tone for
        inspiring visits, including a variety of stylish rooms and spacious suites. Located across the
        street from Penn Station and Madison Square Garden, the Stewart also offers easy access to locations like Times Square, Macy’s and Chelsea.</string>
    <string name="tryp">Tryp New York City Times Square South</string>
    <string name="tryp_address">345 W. 35th St. Manhattan, NY, 10001</string>
    <string name="tryp_desc">With decor that blends NYC chic and Mediterranean warmth, this hotel is
        packed with perks to make you feel at home. That means free gym clothes in the fitness center
        and big-screen TVs and Nintendo video game consoles in the rooms—which are on the sizable side,
        with a number well suited for families. </string>
    <string name="renaissance">Renaissance New York Midtown</string>
    <string name="renaissance_address">218 W. 35th St. Manhattan, NY, 10001</string>
    <string name="renaissance_desc">Located in the Fashion District—within a few steps of MSG—this
        hotel features digitally enhanced design, which changes its looks seasonally. Among the
        Renaissance’s most appealing amenities: an 8,000-square-foot rooftop patio, said to be NYC’s
        biggest, which has a retractable roof for rain-or-shine fun.</string>
    <string name="Fairfield">Fairfield Inn and Suites by Marriott New York Midtown Manhattan/Penn Station</string>
    <string name="Fairfield_address">325 W. 33rd St.       Manhattan, NY, 10001</string>
    <string name="Fairfield_desc">Across the street from the Garden, this property is just a stone’s
        throw from Times Square, the Empire State Building and Broadway theaters. It features a chic
        rooftop bar along with amenities like a free breakfast buffet, a 24-hour fitness center and
        roomy accommodations with modern design.</string>
    <string name="top_of_the_rock">Top of the Rock Observatory </string>
    <string name="top_of_the_rock_desc">Its three observation decks include two that have some shelter
        and one that’s all open-air; it sits atop the famous 30 Rockefeller Center, where famous shows
        like Saturday Night Live are filmed; and it’s open until midnight for spectacular nighttime
        views of the world’s greatest skyline.</string>
    <string name="empire_state">Empire State Building </string>
    <string name="empire_state_desc">This art deco masterpiece was the world’s tallest building for
        four decades, and remains one of the most recognizable structures anywhere on earth. The
        observation deck is open from sunrise until 2am, and on (most) Thursday through Saturday
        nights a live saxophonist provides an atmospheric soundtrack.</string>
    <string name="statue_liberty">Statue of Liberty and Ellis Island</string>
    <string name="statue_liberty_desc">The Statue of Liberty is an icon known worldwide and an enduring,
        inspiring symbol of New York City’s immigrant history. The Ellis Island Immigration Museum is a
        place where US residents can trace their families’ own stories and everyone else can go over
        passenger records, photos and other artifacts reflecting new Americans’ journeys to the land of opportunity.</string>
    <string name="museum_natural_history">American Museum of Natural History </string>
    <string name="museum_natural_history_desc">No matter what subject fascinates you, this museum is
        going to teach you something that will blow your mind. Want to see full-size dinosaur skeletons?
        They’ve got ’em. Learn about the inner workings of the human body? Sure. Feel what it’s like to
        be deep in outer space or far below the surface of the ocean? It’s all there. And if you just
        want to go to the gift shop and buy astronaut ice cream, they’ve got you covered.</string>
    <string name="museum_modern_arts">The Museum of Modern Art (MoMA)</string>
    <string name="museum_modern_arts_desc">This place hosts work by Vincent van Gogh, Frida Kahlo,
        Andy Warhol and many more figures whose work is among the best known and most influential in
        the world of modern art. If you care about painting, sculpture, film, performance or the artistic
        history of New York City, it’s a must-visit.</string>
    <string name="big_bus">Big Bus Tours </string>
    <string name="big_bus_desc">There’s a lot of ground to cover in New York City, and these guided
        bus tours are an efficient way to make sure you see sights like Central Park, Rockefeller
        Center, Wall Street and the Brooklyn Bridge. It’s also an easy way to get around. And while
        the guide speaks English, the taped audio commentary is available in 10 languages.</string>
    <string name="tribute_9_11">9/11 Tribute Center and Walking Tour </string>
    <string name="tribute_9_11_desc">While it’s undoubtedly a much more solemn occasion than most
        activities for an NYC visitor, the 9/11 Tribute Center and Walking Tour are a chance to reflect
        on the events of September 11, 2001. Many find the experience a powerful, memorable way to pay
        respects to those lost on that tragic day.</string>
    <string name="the_met">The Met Fifth Avenue </string>
    <string name="the_met_desc">With 2 million works of art covering 5,000 years of human history, this
        museum receives more visitors than any other in New York City. The Egyptian galleries—which
        include the actual Temple of Dendur, originally built around 15 BC—and the Medieval Art collection
        are just two of the many reasons it’s so popular. If you go, you’ll no doubt uncover a few
        favorite sections of your own.</string>
    <string name="big_apple_greeter">Big Apple Greeter</string>
    <string name="big_apple_greeter_desc">Get a warm New York City welcome from Big Apple Greeters
        team of volunteers (many of whom are multilingual) as they guide you through the Citys
        diverse neighborhoods. You can sign up to request the type of excursion youd like—the form
        asks what neighborhoods tickle your fancy and what you\'re interests are—and you\'ll be matched
        up (availability willing) with a local greeter.</string>
    <string name="central_park">Central Park Conservancy</string>
    <string name="central_park_desc">Central Park has 80 acres of woodland, 250 acres of lawns and
        150 acres of water; trying to see it all without an expert tour guide can be overwhelming.
        The Central Park Conservancys long lineup of free tours aims to cover it all (note: the
        organization also offers a series of ticketed tours focusing on things like "iconic views"
        and Belvedere Castle). </string>
    <string name="tours_by_foot">Free Tours by Foot</string>
    <string name="tours_by_foot_desc">Lace up those walking shoes, and join Free Tours by Foots expert
        guides for deep dives into Manhattan and Brooklyn. Taste the edibles of the Lower East Side,
        Greenwich Village or Chinatown on a food tour (you pay for the eats from your own pocket);
        check out Harlem landmarks like the Apollo Theater; pop in to the thrift stores of Gramercy;
        or explore Chelsea and the High Line to get those striking river views. All guides work solely
        for tips, so the value of each outing is up to you. </string>
    <string name="grand_central_partnership">Grand Central Partnership</string>
    <string name="grand_central_partnership_desc">See why the neighborhood surrounding Grand Central
        Terminal is so much more than a transportation hub. Every Friday at 12:30pm, the Grand Central
        Partnership conducts a 90-minute guided walking tour led by an urban historian.</string>
    <string name="brooklyn_brewery">Brooklyn Brewery and SingleCut Beersmiths</string>
    <string name="brooklyn_brewery_desc">Choose a borough in which to learn about suds-making. Brooklyn
        Brewery hosts free tours every Saturday that start on the half hour between 1pm and 5pm. (
        Under 21s must be accompanied by a parent or guardian.) </string>
    <string name="village_alliance">Village Alliance</string>
    <string name="village_alliance_desc">As evidenced by literary icons of the past, like Mark Twain
        and Edgar Allan Poe, as well as the artists and students today who frequent the neighborhoods
        coffee shops, theaters and music clubs, Greenwich Villages bohemian vibe has stood the test of time.
        Discover the area\'s undeniable charm on a free walking tour sponsored by the Village Alliance.</string>
</resources>