<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        app:srcCompat="@drawable/_barbetta_wallace_jordan_01__card"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView2"
        android:text="@string/barbetta"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/title"
        android:layout_below="@+id/title"
        android:text="@string/barbetta_address"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/address"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView2"
        android:layout_toEndOf="@+id/title"
        android:layout_toRightOf="@+id/title"
        android:text="@string/barbetta_descr"
        android:ellipsize="end"
        android:maxLines="4"
        android:layout_marginBottom="8dp"/>
</RelativeLayout>