<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="8dp"
        app:srcCompat="@drawable/_barbetta_wallace_jordan_01__card"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/iv_image"
        android:text="@string/barbetta"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="8dp"
        android:maxLines="2"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/title"
        android:layout_below="@+id/title"
        android:text="@string/barbetta_address"
        android:layout_marginLeft="8dp"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/iv_image"
        android:layout_toEndOf="@+id/title"
        android:layout_toRightOf="@+id/title"
        android:text="@string/barbetta_descr"
        android:ellipsize="end"
        android:maxLines="5"
        android:layout_alignBottom="@+id/address"
        android:layout_marginRight="8dp"
        android:paddingBottom="8dp"/>
</RelativeLayout>